--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 <body>
   <div class="container">
     <div class="exec-logo">
-      <img src="assets/logo.png" alt="Logo" />
+      <img src="logo.png" alt="Logo" />
     </div>
-    <h1 class="title">Tundra</h1>
+    <h1 class="title">Chaos</h1>
   </div>
   <div class="navbar">
     <a href="#">
@@ -154,11 +154,11 @@
     </a>
   </div>
   <div class="main-content">
-    <h1>tundra: The future is here.</h1>
-    <p>Byfron can't stop you.  Tundra, the undetectable Roblox executor, grants unmatched freedom.  Dominate the game with unparalleled performance. Fully undetected,free and just better the best execution</p>
+    <h1>Chaos the best executor ever.</h1>
+    <p></p€>Byfron is nothing.  chaos the best undetected Roblox executor no crashes updates are fast not like others its just better.</p>
     <div>
-      <a href="https://pastebin.com/jztewxB9" class="btn">Download</a>
-      <a href="https://discord.gg/PRKpDFvvWe" class="btn">Discord</a>
+      <a href="https://youtube.com" class="btn">Download</a>
+      <a href="https://discord.gg/Chaosploit" class="btn">Discord</a>
     </div>
     <div class="icons">
       <div class="icon">
@@ -167,20 +167,6 @@
         </svg>
         <span>Windows 10 & 11</span>
       </div>
-      <div class="icon">
-        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
-          <path d="M 44.527344 34.75 C 43.449219 37.144531 42.929688 38.214844 41.542969 40.328125 C 39.601563 43.28125 36.863281 46.96875 33.480469 46.992188 C 30.46875 47.019531 29.691406 45.027344 25.601563 45.0625 C 21.515625 45.082031 20.664063 47.03125 17.648438 47 C 14.261719 46.96875 11.671875 43.648438 9.730469 40.699219 C 4.300781 32.429688 3.726563 22.734375 7.082031 17.578125 C 9.457031 13.921875 13.210938 11.773438 16.738281 11.773438 C 20.332031 11.773438 22.589844 13.746094 25.558594 13.746094 C 28.441406 13.746094 30.195313 11.769531 34.351563 11.769531 C 37.492188 11.769531 40.8125 13.480469 43.1875 16.433594 C 35.421875 20.691406 36.683594 31.78125 44.527344 34.75 Z M 31.195313 8.46875 C 32.707031 6.527344 33.855469 3.789063 33.4375 1 C 30.972656 1.167969 28.089844 2.742188 26.40625 4.78125 C 24.878906 6.640625 23.613281 9.398438 24.105469 12.066406 C 26.796875 12.152344 29.582031 10.546875 31.195313 8.46875 Z"></path>
-        </svg>
-        <span>iOS</span>
-      </div>
-      <div class="icon">
-        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256">
-          <g fill-opacity="0.47843" fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M24,14.088c-12.573,0 -22.892,9.628 -24,21.912h48c-1.108,-12.284 -11.427,-21.912 -24,-21.912zM33.179,27.079c0,-1.104 0.895,-1.999 1.999,-1.999c1.104,0 1.999,0.895 1.999,1.999c0,1.104 -0.895,1.999 -1.999,1.999c-1.104,0 -1.999,-0.895 -1.999,-1.999zM12.822,29.078c-1.104,0 -1.999,-0.895 -1.999,-1.999c0,-1.104 0.895,-1.999 1.999,-1.999c1.104,0 1.999,0.895 1.999,1.999c0,1.104 -0.895,1.999 -1.999,1.999z"></path><path d="M34.038,19.313c-0.14,0 -0.281,-0.035 -0.41,-0.11c-0.393,-0.227 -0.527,-0.729 -0.301,-1.122l5.197,-9.008c0.227,-0.394 0.729,-0.529 1.122,-0.301c0.393,0.227 0.527,0.729 0.301,1.122l-5.197,9.008c-0.152,0.264 -0.428,0.411 -0.712,0.411z"></path><path d="M13.962,19.313c-0.284,0 -0.56,-0.148 -0.712,-0.411l-5.196,-9.008c-0.227,-0.393 -0.092,-0.895 0.3,-1.122c0.392,-0.228 0.895,-0.093 1.122,0.301l5.197,9.008c0.227,0.394 0.092,0.896 -0.301,1.122c-0.129,0.075 -0.27,0.11 -0.41,0.11z"></path></g></g>
-        </svg>
-        <span>Android</span>
-      </div>
-    </div>
-  </div>
-</body>
+      
 
 </html>
