--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tundra</title>
+  <title>Chaos</title>
   <meta name="description" content="Next level scripting" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="725x725" />
   <style>
@@ -131,7 +131,7 @@
 <body>
   <div class="container">
     <div class="exec-logo">
-      <img src="logo.png" alt="Logo" />
+      <img src="assets/logo.png" alt="Logo" />
     </div>
     <h1 class="title">Chaos</h1>
   </div>
