--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     @import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&display=swap');
 
     body {
-      background-color: #121212;
-      color: #ffffff;
+      background-color: #1f1f1f; /* Lighter background */
+      color: #f0f0f0; /* Lighter text color */
       font-family: 'Google Sans', sans-serif;
       margin: 0;
       padding: 0;
@@ -27,7 +27,7 @@
     }
 
     .logo {
-      fill: #ffffff;
+      fill: #f0f0f0; /* Lighter logo color */
       height: 40px;
       width: auto;
     }
@@ -52,11 +52,11 @@
       justify-content: space-between;
       align-items: center;
       padding: 10px 20px;
-      background-color: #121212;
+      background-color: #333333; /* Darker background */
     }
 
     .navbar a {
-      color: #ffffff;
+      color: #f0f0f0; /* Lighter text color */
       text-decoration: none;
       margin-right: 20px;
     }
@@ -88,9 +88,9 @@
     .btn {
       display: inline-block;
       padding: 10px 20px;
-      background-color: #121212;
-      color: #ffffff;
-      border: 1px solid #ffffff;
+      background-color: #333333; /* Darker background */
+      color: #f0f0f0; /* Lighter text color */
+      border: 1px solid #f0f0f0; /* Lighter border color */
       border-radius: 5px;
       text-decoration: none;
       font-size: 1em;
@@ -98,8 +98,8 @@
     }
 
     .btn:hover {
-      background-color: #ffffff;
-      color: #121212;
+      background-color: #666666; /* Darker background on hover */
+      color: #f0f0f0; /* Lighter text color on hover */
     }
 
     .icons {
@@ -116,13 +116,21 @@
     }
 
     .icon svg {
-      fill: #ffffff;
+      fill: #f0f0f0; /* Lighter icon color */
       height: 40px;
       width: auto;
       margin-bottom: 10px;
     }
 
     .icon span {
+      font-size: 0.8em;
+    }
+
+    .credits {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      color: #f0f0f0; /* Lighter text color */
       font-size: 0.8em;
     }
   </style>
@@ -155,7 +163,7 @@
   </div>
   <div class="main-content">
     <h1>Chaos the best executor ever.</h1>
-    <p></p€>Byfron is nothing.  chaos the best undetected Roblox executor no crashes updates are fast not like others its just better.</p>
+    <p>Byfron is nothing. Chaos is the best undetected Roblox executor. No crashes, updates are fast unlike others, it's just better.</p>
     <div>
       <a href="https://youtube.com" class="btn">Download</a>
       <a href="https://discord.gg/Chaosploit" class="btn">Discord</a>
@@ -167,6 +175,16 @@
         </svg>
         <span>Windows 10 & 11</span>
       </div>
-      
+    </div>
+    <div class="credits">
+      <p>Credits:</p>
+      <ul>
+        <li>Savage: Programmer and UI Designer</li>
+        <li>Cipher: Founder and Programmer</li>
+        <li>Whatman: Programmer and Site Developer</li>
+      </ul>
+    </div>
+  </div>
+</body>
 
 </html>
