--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
     <div>
       <a href="#">Home</a>
       <a href="#" class="disabled">Features</a>
-      <a href="#" class="disabled">Pricing</a>
       <a href="#" class="disabled">Resources</a>
     </div>
     <a href="https://discord.gg/PRKpDFvvWe">
@@ -189,6 +188,10 @@
         <li>Cipher: Founder and Programmer</li>
         <li>Whatman: Programmer and Site Developer</li>
       </ul>
+    </div>
+    <div>
+      <a href="https://youtube.com" class="btn">Download</a>
+      <a href="https://discord.gg/Chaosploit" class="btn">Discord</a>
     </div>
   </div>
 </body>
