--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     @import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&display=swap');
 
     body {
-      color: #f0f0f0; /* Lighter text color */
+      color: #f0f0f0;
       font-family: 'Google Sans', sans-serif;
       margin: 0;
       padding: 0;
-      animation: colorChange 10s infinite alternate; /* Background color animation */
+      animation: colorChange 10s infinite alternate;
     }
 
     .container {
@@ -27,7 +27,7 @@
     }
 
     .logo {
-      fill: #f0f0f0; /* Lighter logo color */
+      fill: #f0f0f0;
       height: 40px;
       width: auto;
     }
@@ -55,7 +55,7 @@
     }
 
     .navbar a {
-      color: #f0f0f0; /* Lighter text color */
+      color: #f0f0f0;
       text-decoration: none;
       margin-right: 20px;
     }
@@ -87,9 +87,9 @@
     .btn {
       display: inline-block;
       padding: 10px 20px;
-      background-color: #333333; /* Darker background */
-      color: #f0f0f0; /* Lighter text color */
-      border: 1px solid #f0f0f0; /* Lighter border color */
+      background-color: #333333;
+      color: #f0f0f0;
+      border: 1px solid #f0f0f0;
       border-radius: 5px;
       text-decoration: none;
       font-size: 1em;
@@ -97,7 +97,7 @@
     }
 
     .btn:hover {
-      background-color: #666666; /* Darker background on hover */
+      background-color: #666666;
     }
 
     .icons {
@@ -114,7 +114,7 @@
     }
 
     .icon svg {
-      fill: #f0f0f0; /* Lighter icon color */
+      fill: #f0f0f0;
       height: 40px;
       width: auto;
       margin-bottom: 10px;
@@ -126,12 +126,11 @@
 
     .credits {
       margin-top: 20px;
-      color: #f0f0f0; /* Lighter text color */
-      font-size: 1.2em; /* Bigger text size */
+      color: #f0f0f0;
+      font-size: 1.2em;
       text-align: center;
     }
 
-    /* Animation */
     @keyframes colorChange {
       0% {
         background-color: #000;
