--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       font-family: 'Google Sans', sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #222222; /* Initial dark background */
       animation: colorChange 10s infinite alternate;
     }
 
@@ -53,7 +54,7 @@
       justify-content: center; /* Centered navbar */
       align-items: center;
       padding: 10px 20px;
-      background-color: #333333; /* Darker background */
+      background-color: #333333; /* Dark background */
     }
 
     .navbar a {
@@ -128,13 +129,13 @@
 
     @keyframes colorChange {
       0% {
-        background-color: #000;
+        background-color: #222222; /* Initial dark background */
       }
       50% {
-        background-color: #444; /* Darkish background */
+        background-color: #444444; /* Darker grey */
       }
       100% {
-        background-color: #000;
+        background-color: #222222; /* Back to initial dark background */
       }
     }
   </style>
