--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     @import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&display=swap');
 
     body {
-      color: #333333; /* Darker text color */
+      color: #f0f0f0; /* Lighter text color */
       font-family: 'Google Sans', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #222222; /* Initial dark background */
-      animation: colorChange 10s infinite alternate;
+      background-color: #333333; /* Dark grey background */
     }
 
     .container {
@@ -29,7 +28,7 @@
     }
 
     .logo {
-      fill: #333333; /* Darker logo color */
+      fill: #f0f0f0; /* Lighter logo color */
       height: 40px;
       width: auto;
     }
@@ -54,7 +53,7 @@
       justify-content: center; /* Centered navbar */
       align-items: center;
       padding: 10px 20px;
-      background-color: #333333; /* Dark background */
+      background-color: #333333; /* Dark grey background */
     }
 
     .navbar a {
@@ -117,7 +116,7 @@
     }
 
     .icon svg {
-      fill: #333333; /* Darker icon color */
+      fill: #f0f0f0; /* Lighter icon color */
       height: 40px;
       width: auto;
       margin-bottom: 10px;
@@ -125,18 +124,6 @@
 
     .icon span {
       font-size: 0.8em;
-    }
-
-    @keyframes colorChange {
-      0% {
-        background-color: #222222; /* Initial dark background */
-      }
-      50% {
-        background-color: #444444; /* Darker grey */
-      }
-      100% {
-        background-color: #222222; /* Back to initial dark background */
-      }
     }
   </style>
 </head>
