--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-family: 'Google Sans', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #333333; /* Dark grey background */
+      background-color: #1f1f1f; /* Darker background */
     }
 
     .container {
@@ -55,7 +55,7 @@
       justify-content: center; /* Centered navbar */
       align-items: center;
       padding: 10px 20px;
-      background-color: #333333; /* Dark grey background */
+      background-color: #1f1f1f; /* Darker background */
     }
 
     .navbar a {
@@ -143,15 +143,9 @@
         </svg>
       </a>
       <div>
-        <a href="#">Home</a>
-        <a href="#" class="disabled">Features</a>
-        <a href="#" class="disabled">Resources</a>
+        <a href="https://youtube.com" class="btn">Download</a>
+        <a href="https://discord.gg/Chaosploit" class="btn">Discord</a>
       </div>
-      <a href="https://discord.gg/PRKpDFvvWe">
-        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 640 512" class="icon" xmlns="http://www.w3.org/2000/svg">
-          
-        </svg>
-      </a>
     </div>
   </div>
   <div class="main-content">
@@ -164,10 +158,6 @@
         </svg>
         <span>Windows 10 & 11</span>
       </div>
-    </div>
-    <div>
-      <a href="https://youtube.com" class="btn">Download</a>
-      <a href="https://discord.gg/Chaosploit" class="btn">Discord</a>
     </div>
   </div>
 </body>
