--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </svg>
         <span>Windows 10 & 11</span>
       </div>
-      <a href="https://discord.com" class="btn">Discord</a>
+      <a href="https://discord.gg/chaosploit" class="btn">Discord</a>
     </div>
   </div>
 </body>
